Update Extract data with API for covid .ipynb

--- a/Extract data with API for covid .ipynb
+++ b/Extract data with API for covid .ipynb
@@ -118,7 +118,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "Obtain population data and select data for 2019 from\n",
+    "Obtain population data and select data for 2019 from\n", ##use this one
     "url = \"https://datausa.io/api/data?drilldowns=State&measures=Population\"\n",
     "'''\n",
     "#Request data and convert to json format\n",
